# shield

./: .gitignore  Cargo.toml  Containerfile.build  README.md
app/: .gitignore  Cargo.toml  Dioxus.toml
app/assets/: global.css  main.css
app/src/: api.rs  api_client.rs  app.rs  components.rs  hooks.rs  main.rs  pages.rs  storage.rs  token_store.rs  use_api_client.rs  use_cameras.rs  use_update_recording_mode.rs  utils.rs
app/src/api/: auth_api.rs  camera_api.rs  client.rs  map_api.rs
app/src/components/: camera.rs  confirmation_modal.rs  forms.rs  group_actions.rs  layout.rs  map.rs  recording_indicator.rs  ui.rs
app/src/components/camera/: camera_actions.module.css  camera_actions.rs  camera_list.module.css  camera_list.rs  recording_indicator.module.css  recording_indicator.rs
app/src/components/forms/: confirmation_modal.rs  otp_input.module.css  otp_input.rs
app/src/components/layout/: bottom_toolbar.module.css  bottom_toolbar.rs  camera_actions.rs  group_actions.rs  row_group.module.css  row_group.rs  top_bar.module.css  top_bar.rs
app/src/components/map/: bottom_panel.rs  camera_info.module.css  camera_info.rs  camera_inspector.module.css  camera_inspector.rs  canvas_gestures.rs  color_swatch_picker.module.css  color_swatch_picker.rs  coord_readout.module.css  coord_readout.rs  door_inspector.module.css  door_inspector.rs  draft_overlay.module.css  draft_overlay.rs  edit_toolbar.module.css  edit_toolbar.rs  geometry.rs  interaction.rs  map_camera.module.css  map_camera.rs  map_door.module.css  map_door.rs  map_view.module.css  map_view.rs  map_wall.module.css  map_wall.rs  minimap.module.css  minimap.rs  scale_bar.module.css  scale_bar.rs  unplaced_badge.module.css  unplaced_badge.rs  viewport.rs  wall_inspector.module.css  wall_inspector.rs  zoom_controls.module.css  zoom_controls.rs
app/src/components/ui/: buttons.rs  disclosure_row.rs  icon_button.rs  modal.module.css  modal.rs  primary_button.rs  row_group.rs  selectable_row.module.css  selectable_row.rs
app/src/components/ui/buttons/: base_button.module.css  base_button.rs  icon_button.module.css  icon_button.rs  primary_button.module.css  primary_button.rs  secondary_button.module.css  secondary_button.rs
app/src/hooks/: use_api_client.rs  use_cameras.rs  use_disable_page_zoom.rs  use_element_rect.rs  use_map.rs  use_recording_mode.rs  use_safari_pinch.rs
app/src/pages/: home.rs  login.module.css  login.rs  map.rs  not_found.rs
app/src/storage/: token_store.rs
app/src/types/: error.rs
app/src/utils/: camera.rs  dom.rs  recording_mode.rs
deploy/: deploy.sh  shield.caddy  shield.conf  shield.config.toml.template  shield.service
models/: Cargo.toml
models/src/: api.rs  auth.rs  camera.rs  lib.rs  map.rs
scripts/: deploy.sh  dev.sh
service/: Cargo.toml
service/src/: app_error.rs  config.rs  credentials.rs  handlers.rs  main.rs  map_store.rs  middleware.rs  refresh_token_store.rs  routes.rs
service/src/handlers/: add_map_camera.rs  add_map_door.rs  add_map_wall.rs  authenticate.rs  delete_map_camera.rs  delete_map_door.rs  delete_map_wall.rs  get_map.rs  list_cameras.rs  refresh.rs  set_recording_mode.rs  update_map_camera.rs  update_map_door.rs  update_map_wall.rs
service/src/middleware/: auth_backoff.rs
