[package]
name = "shield-app"
version = "0.1.0"
authors = ["Xapphire13"]
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
dioxus = { version = "0.6.1", features = ["router"] }
dioxus-feather-icons = "0.2.3"
gloo-storage = "0.3.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
shield-models = { version = "0.1.0", path = "../models" }
thiserror = "2.0.12"
web-sys = "0.3.77"

[features]
default = ["web"]
web = ["dioxus/web"]
