[package]
name = "shield-app"
version = "0.1.0"
authors = ["Xapphire13"]
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
dioxus = { version = "0.7.9", features = ["router"] }
dioxus-free-icons = { version = "0.10.0", features = ["feather"] }
gloo-storage = "0.3.0"
js-sys = "0.3.77"
reqwest = { version = "0.12.20", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
shield-models = { version = "0.1.0", path = "../models" }
thiserror = "2.0.12"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "ClipboardEvent",
    "DataTransfer",
    "DomRect",
    "HtmlElement",
    "ResizeObserver",
    "ResizeObserverEntry",
] }

[features]
default = ["web"]
web = ["dioxus/web"]
