[package]
name = "shield-app"
version = "0.1.0"
authors = ["Xapphire13"]
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
dioxus = { version = "0.7.9", features = ["router"] }
dioxus-free-icons = { version = "0.10.0", features = ["lucide"] }
gloo-storage = "0.3.0"
js-sys = "0.3.77"
reqwest = { version = "0.12.20", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
shield-models = { version = "0.1.0", path = "../models" }
stylance = "0.8.4"
thiserror = "2.0.12"
uuid = { version = "1", features = ["v4", "js"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    "Window",
    "Document",
    "Element",
    "ClipboardEvent",
    "DataTransfer",
    "DomRect",
    "EventTarget",
    "HtmlElement",
    "KeyboardEvent",
    "ResizeObserver",
    "ResizeObserverEntry",
] }

[features]
default = ["web"]
web = ["dioxus/web"]

# Scoped component CSS: `import_crate_style!` reads a co-located `.module.css`
# and exposes its class names as hashed constants; the `stylance` CLI bundles
# every module into the generated `assets/styles.css` (gitignored). The CLI and
# the macro both read this table, so they can't disagree on hashing.
[package.metadata.stylance]
output_file = "./assets/styles.css"
