[package]
name = "shield-service"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
serde = "1.0.219"
shield-models = { version = "0.1.0", path = "../models" }
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
tower-http = { version = "0.6.6", features = ["cors"] }
# unifi-protect-client = "0.1.2"
unifi-protect-client = { path = "../../unifi-protect-client" }
