[package]
name = "shield-service"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = "0.4.41"
futures = "0.3.31"
jsonwebtoken = "9.3.1"
postcard = { version = "1.1.2", features = ["alloc"] }
rand = "0.9.1"
serde = "1.0.219"
serde_json = "1.0.140"
shield-models = { version = "0.1.0", path = "../models" }
sled = "0.34.7"
tokio = { version = "1.45.1", features = ["full"] }
toml = "0.8.23"
totp-rs = { version = "5.7.0", features = ["gen_secret"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unifi-protect-client = "0.2.0"
